[gd_scene load_steps=7 format=3 uid="uid://cougpl72erks0"]

[ext_resource type="Script" uid="uid://um14pobou4rw" path="res://ui/enter_name.gd" id="1_j5rb0"]
[ext_resource type="FontFile" uid="uid://ksfnpkei2fwm" path="res://assets/merchant-copy/Merchant Copy.ttf" id="1_sm8sv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljnk4"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.06879826, 0.06879829, 0.068798244, 1)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 32.0
expand_margin_top = 32.0
expand_margin_right = 32.0
expand_margin_bottom = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_j5rb0"]
font = ExtResource("1_sm8sv")
font_size = 64
font_color = Color(0.3882353, 0.003921569, 0.003921569, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
stacked_outline_count = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm8sv"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.5686275, 0.22352941, 0.015686275, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5rb0"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.67259455, 0.2702953, 0.023984034, 1)
draw_center = false

[node name="EnterName" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5rb0")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljnk4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "ENTER NAME"
label_settings = SubResource("LabelSettings_j5rb0")
horizontal_alignment = 1

[node name="TextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sm8sv")
theme_override_font_sizes/font_size = 32
context_menu_enabled = false
emoji_menu_enabled = false

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3882353, 0.003921569, 0.003921569, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_sm8sv")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_sm8sv")
theme_override_styles/hover = SubResource("StyleBoxFlat_j5rb0")
text = "CONTINUE"

[connection signal="text_submitted" from="PanelContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
